# appimanager

./: CHANGELOG.md  Cargo.toml  Justfile  personal.md  readme.md
src/: lib.rs  main.rs
src/subcommands/: add.rs  delete.rs  list.rs  mod.rs
tests/: test_lib.rs  test_main.rs  test_sub.rs
