[package]
name = "appim"
version = "1.0.0"
edition = "2021" 
description="A simple cli to create and manage desktop entries from executables" 
authors = ["@khuongduy354"]
repository="https://github.com/khuongduy354/appimanager"
readme="readme.md"
categories=["command-line-interface"] 
keywords = [
  "argument",
  "cli",
  "arg",
  "appimage",
  "desktop-entry",
  ]

license="MIT" 


[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
